# pix2face

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download_data  download_data.bsh  external_software.txt  pix2face-conda-linux.sh  pix2face_env.bsh
docker/: Dockerfile  README.md  build.bsh  build_docker_image.bsh  build_pix2face_sources.bsh  docker-build.bsh  docker-compose.yml  download_data_docker.bsh  entrypoint.bsh  requirements.txt  run.bsh  run_coeff_estimation.bsh  run_coeff_estimation_example.bsh  run_pix2face_interactively.bsh  run_pix2face_notebook.bsh  run_pose_estimation.bsh  run_pose_estimation_example.bsh
docker/scripts/: README.md  build_face3d.bsh  build_janus.bsh  build_pix2face.bsh  estimate_coeffs.bsh  estimate_pose.bsh
notebooks/: pix2face_demo.ipynb  pix2face_eos_fitting.ipynb
python/pix2face_estimation/: __init__.py  camera_decomposition.py  camera_estimation.py  coefficient_estimation.py  geometry_utils.py  mesh_renderer.py  subject_blend.py
scripts/: Landmarks2Headpose.py  Pix2Headpose.py  align_face_mesh.py  basel_to_surrey_rigid_transform.txt  estimate_3D_batch.py  estimate_coeffs_batch.py  estimate_coeffs_example.py  estimate_pose.py  estimate_pose_batch.py  estimate_pose_example.py  estimate_pose_from_landmarks.py  extract_pose_from_coeffs.py  jitter_msceleb1m.py  pix2face_demo.py
